# agency

./: .env_dev  .gitignore  docker-compose-prod.yml  docker-compose.yml
flask_app/: Dockerfile  pyproject.toml  requirements.txt
flask_app/flaskr/: __init__.py  auth.py  config.py  data_models.py  default.py  errors.py  mixins.py  models.py  resources.py  utils.py
flask_app/flaskr/pydantic_models/: __init__.py  image.py  item.py  order.py  user.py
nginx/: nginx.conf
nginx_prod/: nginx.conf
reference/: agency.yaml
vue_app/: Dockerfile  index.html  package.json
vue_app/src/: App.vue  api.js  main.js  route.js
vue_app/src/_classes/: current_user.js
vue_app/src/_methods/: fetch.js
vue_app/src/components/: Admin.vue  Alerts.vue  Catalog.vue  CatalogList.vue  CatalogTitle.vue  Chat.vue  CreateItem.vue  CreateItemSlider.vue  EditItem.vue  Header.vue  Item.vue  ItemSlider.vue  Login.vue  ModalLogin.vue  ModalRegister.vue  Orders.vue  OrdersItem.vue  OrdersList.vue  Register.vue  UsersItem.vue  UsersList.vue  dataList.vue  pagination.vue
vue_app/src/stores/: alerts.js  catalog.js  currentApp.js  currentUser.js
